[package]
name = "lzio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
bytes = "1.4.0"
petgraph = "0.6.3"
smallvec = "1.11.0"
unsafekit = { path = "../unsafekit" }
rand = "0.8.5"

[features]
default = []
unsafe = ["unsafekit/unsafe"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "huffman"
harness = false

[profile.release]
debug = true
